force-app/main/default/objects/office_player__e/office_player__e.object-meta.xml
<CustomObject>
    <label>office player</label>
    <pluralLabel>office players</pluralLabel>
</CustomObject>