force-app/main/default/objects/office_player__e/fields/character__c.field-meta.xml
<CustomField>
    <fullName>character__c</fullName>
    <label>character</label>
    <length>255</length>
    <type>Text</type>
</CustomField>