force-app/main/default/objects/office_player__e/fields/move_coord__c.field-meta.xml
<CustomField>
    <fullName>move_coord__c</fullName>
    <description
  >If this is a move signal this field contains the coordinates the player will move to</description>
    <label>move coord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>