force-app/main/default/objects/office_player__e/fields/moveSignal__c.field-meta.xml
<CustomField>
    <fullName>moveSignal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this event is to signal a player move</description>
    <label>moveSignal</label>
    <type>Checkbox</type>
</CustomField>