force-app/main/default/objects/office_player__e/fields/office_id__c.field-meta.xml
<CustomField>
    <fullName>office_id__c</fullName>
    <description>Record Id of Office_Play_Config__c</description>
    <label>office id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>