force-app/main/default/objects/office_player__e/fields/playerId__c.field-meta.xml
<CustomField>
    <fullName>playerId__c</fullName>
    <description>Player Record Id</description>
    <label>playerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>